--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       line-height: 100px;
       background-color: #fff;
     }
+    .navbar-default{
+      border-color: transparent;
+    }
+    #aaa{
+      border: 0;
+    }
     .navs{
       height: 101px;
     }
@@ -32,7 +38,8 @@
       color: #333 !important;
     }
     .navbar-toggle{
-      margin-top: 33px;
+      
+      transform: translateY(4%);
     }
     .collapse p{
       line-height: 15px;
@@ -71,7 +78,7 @@
       height: 100%;
       line-height: 100%;
     }
-    @media screen and (max-width:766px){
+    @media screen and (max-width:767px){
       .pull-right{
         width: 100%;
       }
@@ -79,7 +86,20 @@
         left: 58%;
       }
       .navbar-nav>li:last-of-type>a{
-      padding-right: 15px;
+        padding-right: 15px;
+      }
+      .navs{
+         height: 50px;
+      }
+      .navbar-brand{
+       height: 50px;
+      }
+      .navbar-brand img{
+       height: 188%;
+      }
+      .navbar{
+        min-height: 50px;
+        line-height: 50px;
       }
     }
     @media screen and (min-width:765px) and (max-width:1200px){
@@ -137,7 +157,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-12" style="padding: 0 0">
           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
@@ -157,11 +177,5 @@
           </div>
 <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script>
-  window.onresize=function(){
-
-  }
-
-</script>
 </body>
 </html>
